<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@android:color/white">



    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cLayout1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        android:theme="@style/editTextStyle">

        <Button
            android:id="@+id/cancelButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="84dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/bg_shape"
            android:text="@string/cancel"
            android:textColor="@android:color/black"
            app:layout_constraintTop_toBottomOf="@id/resetButton"
            />

        <Button
            android:id="@+id/resetButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/bg_shape"
            android:gravity="center"
            android:text="@string/resetPassword"
            android:textColor="@android:color/black"
            app:layout_constraintTop_toBottomOf="@id/emailInput"
            android:padding="10dp"/>

        <EditText
            android:id="@+id/emailInput"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/edittext_design"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/emailInput"
            android:inputType="textEmailAddress"/>


    </androidx.constraintlayout.widget.ConstraintLayout>


</RelativeLayout>